Added Glass door api links and info
still need api key

--- a/index.html
+++ b/index.html
@@ -14,5 +14,14 @@
 </head>
 <body>
 
+
+<!--Glass Door API Call-->
+<!--Needs API KEY-->
+	<a href="http://api.glassdoor.com/api/api.htm?v=1&format=json&t.p=120&t.k=KEY GOES HERE&action=employers&q=pharmaceuticals&userip=192.168.43.42&useragent=Mozilla/%2F4.0">Job Search</a>
+	<br>
+
+	<!--You must use the following attribution when displaying Glassdoor's API results. Copy the code below and paste it near the results on your web page:-->
+	<a href='https://www.glassdoor.com/index.htm'>powered by <img src='https://www.glassdoor.com/static/img/api/glassdoor_logo_80.png' title='Job Search' /></a>
+
 </body>
 </html>
