--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html>
 <head>
     <title>Working Title</title>
+
+
+<link rel="stylesheet" href="css/style.css">
+
 <!-- Latest compiled and minified CSS -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+  	</script>
+
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <!-- Optional theme -->
@@ -11,17 +19,105 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+
+
 </head>
-<body>
+	<body>
+
+	<h1><a  id: ="glassSearch">Job Search</a></h1>
+		<br>
+	
+	<input id="pac-input" class="controls" type="text" placeholder="Search Box">
+			
+		<div id = "map"></div>
+
+		<div id = "pac-input"></div>
+
+		<div id = "discription"></div>
+
+		<div id = "infowindow-content"></div>
+
+		<div class="pac-card"></div>
+		
+		<div id="pac-container"></div>
+		
+		<div class="pac-controls"></div>
+		
+		<div id="pac-input"></div>
+		
+		<div id="title"></div>
+		
+		<div id="target"></div>
 
 
-<!--Glass Door API Call-->
-<!--Needs API KEY-->
-	<a href="http://api.glassdoor.com/api/api.htm?v=1&format=json&t.p=120&t.k=KEY GOES HERE&action=employers&q=pharmaceuticals&userip=192.168.43.42&useragent=Mozilla/%2F4.0">Job Search</a>
-	<br>
 
-	<!--You must use the following attribution when displaying Glassdoor's API results. Copy the code below and paste it near the results on your web page:-->
-	<a href='https://www.glassdoor.com/index.htm'>powered by <img src='https://www.glassdoor.com/static/img/api/glassdoor_logo_80.png' title='Job Search' /></a>
+	<!--Zillow Widget, we mignt be able to use this-->
+	<div id = "zill"></div>
+	<div id="zillow-large-search-box-widget-container" style="width:432px;overflow:hidden;background-color:#e7f1fd;color:#555; font: normal normal normal 13px verdana,arial,sans-serif;line-height:13px;margin:0 auto;padding:0;text-align:center;border:1px solid #adcfff;letter-spacing:0;text-transform:none;">
+		
+		<h2 style="color:#d61;text-align:left;font-size:20px;line-height:20px;font-weight:normal;float:left;width:200px;margin-left:10px;margin-top:5px;letter-spacing:0;text-transform:none;">Find Homes
+		</h2>
 
-</body>
+			<div style="float:right;"><a href="https://www.zillow.com/" target="_blank" rel="	powered-by-zillow.gif"></img></a>
+			</div>
+
+			<iframe scrolling="no" src="https://www.zillow.com/widgets/search/LargeSearchBoxWidget.htm?did=zillow-large-search-box-iframe-widget&type=iframe&rgname=Dallas+Tx&shvi=yes" width="430" frameborder="0" height="400">
+				
+			</iframe>
+
+		<table id="zillow-tnc-widget-footer-links" width="100%" style="font: normal normal normal 10px verdana,arial,sans-serif;text-align:left;line-height:12px;margin:10px 5px;padding:0;border-spacing:0;border-collapse:collapse;">
+
+		<tbody style="margin:0;padding:0;">
+
+		<tr style="margin:0;padding:0;">
+
+			<td style="font-weight:bold;font-size:10px;color:#555;text-align:left;margin:0;padding:0;">QUICK LINKS:</td>
+		</tr>
+
+		<tr style="margin:0;padding:0;">
+
+			<td style="margin:0;padding:0;"><span id="widgetFooterLink" class="regionBasedLink"><a href="https://www.zillow.com/dallas-tx/" target="_blank" rel="nofollow" style="color:#36b;font-family:verdana,arial,sans-serif;font-size:10px;margin:0 5px 0 0;padding:0;text-decoration:none;"><span class="region">dallas</span> Real Estate Listing</a></span>
+			</td>
+
+			<td style="margin:0;padding:0;"><span id="widgetFooterLink"><a href="https://www.zillow.com/mortgage-rates/" target="_blank" rel="nofollow" style="color:#36b;font-family:verdana,arial,sans-serif;font-size:10px;margin:0 5px 0 0;padding:0;text-decoration:none;">Mortgage Rates</a></span>
+			</td>
+
+			<td style="margin:0;padding:0;"><span id="widgetFooterLink"><a href="https://www.zillow.com/refinance/" target="_blank" rel="nofollow" style="color:#36b;font-family:verdana,arial,sans-serif;font-size:10px;margin:0 5px 0 0;padding:0;text-decoration:none;">Refinancing</a></span>
+			</td>
+
+		</tr>
+
+		<tr style="margin:0;padding:0;">
+
+			<td style="margin:0;padding:0;"><span id="widgetFooterLink" class="regionBasedLink"><a href="https://www.zillow.com/dallas-tx/foreclosures/" target="_blank" rel="nofollow" style="color:#36b;font-size:10px;margin:0 5px 0 0;padding:0;text-decoration:none;"><span class="region">Dallas</span> Foreclosures</a></span>
+			</td>
+
+			<td style="margin:0;padding:0;"><span id="widgetFooterLink"><a href="https://www.zillow.com/mortgage-calculator/" target="_blank" rel="nofollow" style="color:#36b;font-size:10px;margin:0 5px 0 0;padding:0;text-decoration:none;">Mortgage Calculators</a></span>
+			</td>
+
+			<td style="margin:0;padding:0;"><span id="widgetFooterLink"><a href="https://www.zillow.com/mortgage-rates/" target="_blank" rel="nofollow" style="color:#36b;font-size:10px;margin:0 5px 0 0;padding:0;text-decoration:none;">Purchase Loans</a></span>
+			</td>
+
+			</tr>
+			</tbody>
+		</table>
+	</div>
+
+
+
+	<!--Glass Door API Call-->
+	
+		
+
+		<!--You must use the following attribution when displaying Glassdoor's API results. Copy the code below and paste it near the results on your web page:-->
+		<a href='https://www.glassdoor.com/index.htm'>powered by <img src='https://www.glassdoor.com/static/img/api/glassdoor_logo_80.png' title='Job Search' /></a>
+
+
+		
+
+	<script src = js/javascript.js ></script>
+	<script src = js/zillowJS.js ></script>
+	<script src = js/glassDoorJS.js ></script>
+
+	</body>
 </html>
