--- a/index.html
+++ b/index.html
@@ -41,16 +41,78 @@
 
             <form role="form">
               <div class="form-group">
-                <label for="job-input">Job Title:</label>
-                <input class="form-control" id="job-input" type="text">
+                <label for="job-input">Keyword:</label>
+                <input class="form-control" id="job-input" type="text" value="ex: Information Technology">
               </div>
               <div class="form-group">
                 <label for="address-input">Address:</label>
                 <input class="form-control" id="address-input" type="text">
               </div>
-              <div class="form-group">
-                <label for="city-state-input">City and State:</label>
-                <input class="form-control" id="city-state-input" type="text">
+              <div class="row">
+                <div class="col-md-9">
+                  <div class="form-group">
+                    <label for="city-state-input">City:</label>
+                    <input class="form-control" id="city-state-input" type="text">
+                  </div>
+                </div>
+                <div class="col-md-3">
+                  <div class="form-group">
+                    <label for="salaryRange-input">Select State:</label>
+                    <select class="form-control" id="state-input">
+                      <option>AL</option>
+                      <option>AK</option>
+                      <option>AZ</option>
+                      <option>AR</option>
+                      <option>CA</option>
+                      <option>CO</option>
+                      <option>CT</option>
+                      <option>DE</option>
+                      <option>DC</option>
+                      <option>FL</option>
+                      <option>GA</option>
+                      <option>HI</option>
+                      <option>ID</option>
+                      <option>IL</option>
+                      <option>IN</option>
+                      <option>IA</option>
+                      <option>KS</option>
+                      <option>KY</option>
+                      <option>LA</option>
+                      <option>ME</option>
+                      <option>MD</option>
+                      <option>MA</option>
+                      <option>MI</option>
+                      <option>MN</option>
+                      <option>MS</option>
+                      <option>MO</option>
+                      <option>MT</option>
+                      <option>NE</option>
+                      <option>NV</option>
+                      <option>NH</option>
+                      <option>NJ</option>
+                      <option>NM</option>
+                      <option>NY</option>
+                      <option>NC</option>
+                      <option>ND</option>
+                      <option>OH</option>
+                      <option>OK</option>
+                      <option>OR</option>
+                      <option>PA</option>
+                      <option>RI</option>
+                      <option>SC</option>
+                      <option>SD</option>
+                      <option>TN</option>
+                      <option>TX</option>
+                      <option>UT</option>
+                      <option>VT</option>
+                      <option>VA</option>
+                      <option>WA</option>
+                      <option>WV</option>
+                      <option>WI</option>
+                      <option>WY</option>
+                    </select>
+                  </div>
+                </div>
               </div>
               <div class="form-group">
                 <label for="radius-input">Radius in Miles:</label>
@@ -62,13 +124,17 @@
 
                 <!-- dropdown options -->
                 <div class="form-group">
-                  <label for="salaryRange-input">Select list:</label>
+                  <label for="salaryRange-input">Minimum Salary ($):</label>
                   <select class="form-control" id="salaryRange-input">
-                    <option>$20,000 - $40,000</option>
-                    <option>$40,000 - $70,000</option>
-                    <option>$70,000 - $100,000</option>
-                    <option>$100,000 - $300,000</option>
-                    <option>$300,000+</option>
+                    <option>0</option>
+                    <option>25000</option>
+                    <option>50000</option>
+                    <option>75000</option>
+                    <option>100000</option>
+                    <option>125000</option>
+                    <option>150000</option>
+                    <option>175000</option>
+                    <option>200000</option>
                   </select>
                 </div>
                   <!-- <div class="dropdown">
@@ -115,6 +181,34 @@
           </div>
         </div>
       </div> 
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">
+              Jobs Found:
+            </h3>
+          </div>
+          <div class="panel-body" id="found-jobs">
+          
+          </div>
+
+        </div>
+        <a href='https://www.glassdoor.com/index.htm'>powered by <img src='https://www.glassdoor.com/static/img/api/glassdoor_logo_80.png' title='Job Search' /></a>
+      </div>
+      <div class="col-md-6">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">
+              Apartments Found:
+            </h3>
+          </div>
+          <div class="panel-body" id="found-jobs">
+          
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
