--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <!-- LINK TO FIREBASE GOES HERE -->
   <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase.js"></script>
 
+  
+
 </head>
 
 <body>
@@ -41,8 +43,8 @@
 
             <form role="form">
               <div class="form-group">
-                <label for="job-input">Keyword:</label>
-                <input class="form-control" id="job-input" type="text" value="ex: Information Technology">
+                <label for="job-input">Job Title or Keyword:</label>
+                <input class="form-control" id="job-input" type="text" value="ex: IT Specialist, food">
               </div>
               <div class="form-group">
                 <label for="address-input">Address:</label>
@@ -195,7 +197,6 @@
           </div>
 
         </div>
-        <a href='https://www.glassdoor.com/index.htm'>powered by <img src='https://www.glassdoor.com/static/img/api/glassdoor_logo_80.png' title='Job Search' /></a>
       </div>
       <div class="col-md-6">
         <div class="panel panel-default">
@@ -211,18 +212,36 @@
       </div>
     </div>
   </div>
+
+<!-- Modal -->
+<div id="alertModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h2 class="modal-title text-center  ">No Jobs Found</h2>
+      </div>
+      <div class="modal-body text-center">
+        <h4>We couldn't find any jobs with that job title or query. Care to try again?</h4>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
 </div>
 
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery.js"></script>
 
-  <!-- Script -->
-  <script>
-    // ========================================== START CODING BELOW!!
+  <!-- Bootstrap Javascript, because Modals are nice.-->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-
-  </script>
-
+  <!--Our Javascript-->
   <script type="text/javascript" src="js/javascript.js"></script>
 </body>
 
