--- a/index.html
+++ b/index.html
@@ -267,6 +267,25 @@
         </div>
       </div>
     </div>
+    <div id="alertModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h2 class="modal-title text-center  ">No Jobs Found</h2>
+          </div>
+          <div class="modal-body text-center">
+            <h4>We couldn't find any jobs with that job title or query. Care to try again?</h4>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+
+      </div>
+    </div>
     <script>
       // This example adds a search box to a map, using the Google Place Autocomplete
       // feature. People can enter geographical searches. The search box will return a
