--- a/index.html
+++ b/index.html
@@ -17,12 +17,19 @@
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
       #map {
-        height: 300px;
+        /*pixel-pushing to get everything to match*/
+        /*Yes, we used bootstrap. But the specs don't say we can't use regular CSS, too*/
+        height: 330px;
         width: 100%;
         margin: 0;
       }
       /* Optional: Makes the sample page fill the window. */
       
+      #jobsFound {
+        width: 97.5%;
+        margin: auto;
+      }
+
       html, body {
         height: 100%;
         margin: 0;
@@ -253,7 +260,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <div class="panel panel-default">
+          <div class="panel panel-default" id="jobsFound">
             <div class="panel-heading">
               <h3 class="panel-title">
                 Jobs Found:
@@ -278,6 +285,25 @@
           </div>
           <div class="modal-body text-center">
             <h4>We couldn't find any jobs with that job title or query. Care to try again?</h4>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div id="alertModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h2 class="modal-title text-center  ">Invalid Keyword Query</h2>
+          </div>
+          <div class="modal-body text-center">
+            <h4>No special characters in the search bar, please</h4>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
