--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             </h3>
           </div>
           <div class="panel-body" id="found-apartments">
-            <input id="pac-input" class="controls" type="text" value="Apartments">
+            <input id="pac-input" class="controls" type="text" placeholder="Dallas Apartments">
             <div id="map"></div>
           </div>
         </div>  
@@ -293,7 +293,7 @@
 
       </div>
     </div>
-    <div id="alertModal" class="modal fade" role="dialog">
+    <div id="validationModal" class="modal fade" role="dialog">
       <div class="modal-dialog">
 
         <!-- Modal content-->
