--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <br>
 
     <!-- Jumbotron -->
-    <div class="jumbotron" style="color: white; border-color: white;>
+    <div class="jumbotron" style="color: white;">
       <h1 class="text-center">ZED: Migrating Made Easy</h1>
       <h3 class="text-center">Search a job. Find a home. Make the move.</h3>
     </div>
