Update and rename home.html to index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<h1>ZED.</h1>
 				<h2>Begin Your Migration Here</h2>
 			<hr>
-				<a href="index.html">
+				<a href="home.html">
 					<button>Click here to start</button>
 				</a>
 			</div>
