--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 			<!--  footer  -->
-	<div class="footer">&copy; Copywright Zed Industries</div>
+	<div class="footer">&copy; Copyright Zed Industries</div>
 			<!-- JS for canvas -->
 			<script type="text/javascript" src="./js/landing.js"></script>
 </body>
